[package]
name = "cicip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.5", features = ["derive"] }
dotenvy = "0.15.7"
ratatui = "0.23.0"
serde = { version = "1.0.188", features = ["derive"] }
serde-aux = "4.2.0"
serde_json = "1.0.107"
